_deploy/k8s/infrastructure/elasticsearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: leafy-elasticsearch
  namespace: leafy
spec:
  ports:
    - port: 9200
      targetPort: 9200
      name: elasticsearch
  selector:
    app: elasticsearch
  clusterIP: None
