_deploy/k8s/infrastructure/kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: leafy-kafka
  namespace: leafy
spec:
  ports:
    - name: kafka-plaintext
      port: 9092
      targetPort: 9092
    - name: kafka-internal
      port: 29092
      targetPort: 29092
  selector:
    app: kafka
  clusterIP: None
