_deploy/k8s/infrastructure/mqtt-broker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: leafy-mqtt-broker
  namespace: leafy
spec:
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: mqtt-websocket
      port: 9001
      targetPort: 9001
  selector:
    app: mqtt-broker
